cmake_minimum_required(VERSION 3.26)
project(Assignment1_initial)

set(CMAKE_CXX_STANDARD 11)

add_executable(Assignment1_initial main.cpp
Adam.cpp
        Adam.h
        FunctionRn.cpp
        Monomial.h
        Point.h
        Test1.h
        Test2.h
        Test2B.h
        Test3.h
        Point.h
        Utility.h
FunctionRn.h
        Monomial.cpp
        Point.cpp
        Adam.cpp

)
